# wealth-hoidings

./: .env  .gitignore  README.md  business_definition.json  house_buyling_total_price.py  main.py  pyproject.toml  researcher.py  total_price.py
source/: 现在可以买智驾车了.md
src/: agents.py  bom_agent.py  bom_tools.py  planning_agent.py  research_tools.py
static/: style.css
templates/: index.html
tools/: bom_agent_workflow.py
关注公司和板块/: 中国激光雷达.md  中国芯片.md  智驾梳理.md  重点关注新能源品牌.md
